FIX: Header Logo JS and CSS Wrong Width

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,7 +27,6 @@
     padding: 1px 8px 0 6px;
     margin: 1px;
     height: 50px;
-    width: 100%;
     cursor: pointer;
 }
 
